@@ -162,7 +162,8 @@ extern void recompute_userinst(int bank, int prog);
 extern void free_userinst();
 
 extern void init_channel_layer(int);
-extern void remove_channel_layer(int);
 extern void add_channel_layer(int, int);
+extern void sub_channel_layer(int, int);
+extern void remove_channel_layer(int);
 
 #endif /* ___READMIDI_H_ */
